ASU GSA 7.x-1.1, 2018-06-16
—————————————————————————
- Now updates the Google Appliance module when it is updated from prior releases up to v1.14.
- Added this CHANGELOG.txt file
- Removed ASU GSA admin configuration settings page (Google Appliance can handle this)
  - Added Local Search option to Google Appliance settings page.

ASU GSA 7.x-1.0, unknown
—————————————————————————
- Initial creation and installation of ASU GSA module.