@@ -2,6 +2,6 @@ name = ASU GSA
 description = "ASU-specific customizations for Google Search Appliance results, and the Google Appliance contrib module."
 core = 7.x
 package = ASU
-version = 7.x-1.1
+version = 7.x-1.2
 project = asu_gsa
 dependencies[] = google_appliance
