@@ -1,44 +1,50 @@
-#edit-search-keys, #edit-search-keys--2 {
+.asu-gsa-search-option #edit-search-keys,
+.asu-gsa-search-results #edit-search-keys--2 {
   float: left;
   width: 90%;
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
 }
 
-.btn.search {
+.asu-gsa-search-option .btn.search,
+.asu-gsa-search-results .btn.search {
   margin-top: 0;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
-  height: 38px;
+  vertical-align: text-top;
+}
+.asu-gsa-search-results .btn.search {
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+.asu-gsa-search-option .btn.search {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.search-google-appliance-search-form #edit-submit--2 {
+.asu-gsa-search-results .search-google-appliance-search-form #edit-submit--2 {
   display: none;
 }
 
-#asu-gsa-search-form .form-submit {
-  display: none;
-}
-
-.search-results {
+.asu-gsa-search-results .search-results {
   padding-left: 5px;
 }
 
-.search-results li {
+.asu-gsa-search-results .search-results li {
   overflow-wrap: break-word;
 }
 
-.search-results .search-info {
+.asu-gsa-search-results .search-results .search-info {
   overflow-wrap: break-word;
 }
-
-.form-control.form-text.contained {
+.asu-gsa-search-option .form-control.form-text.contained,
+.asu-gsa-search-results .form-control.form-text.contained {
   width: 200px;
   float: left;
   height: 35px;
 }
 
-.search-option {
+.asu-gsa-search-option {
   margin-bottom: 20px;
   font-size: 20px;
   padding-top: 30px;
@@ -46,58 +52,56 @@
   border-bottom: 1px solid #d7d7d7;
 }
 
-.search-option a {
+.asu-gsa-search-option a {
   border-bottom: none;
   color: #2a2a2a;
   font-weight: bold;
 }
 
-#search-results-heading {
-  display: none;
-}
-
-.search-collection {
+.asu-gsa-search-option .asu-gsa-search-collection {
   margin-right: 10px;
 }
 
-.search-selected:hover {
+.asu-gsa-search-option .search-selected:hover {
   border-bottom: 4px solid #FFBF36 !important;
 }
 
-.search-selected, .search-selected:hover {
+.asu-gsa-search-option .search-selected,
+.asu-gsa-search-option .search-selected:hover {
   border-bottom: 4px solid #990033 !important;
   padding-bottom: 10px;
 }
 
-.search-gsa-sort {
+.asu-gsa-search-option .search-gsa-sort {
   float: right;
   font-size: smaller;
 }
 
-.search-gsa-sort a {
+.asu-gsa-search-option .search-gsa-sort a {
   border-bottom: 1px dotted #8C1D40;
   color: #8C1D40;
   padding-bottom: 5px;
 }
 
-.google-appliance-sort-headers {
+.asu-gsa-search-results .google-appliance-sort-headers {
   display: none;
 }
 
-.pager li > a, .pager li > span {
+.asu-gsa-search-results .pager li > a,
+.asu-gsa-search-results .pager li > span {
   border-radius: 0;
   color: #a90044;
 }
 
-.item-list ul li {
+.asu-gsa-search-results .item-list ul li {
   margin: -3px;
 }
 
-.item-list .page li {
+.asu-gsa-search-results .item-list .page li {
   padding: 0;
 }
 
-.pager-current {
+.asu-gsa-search-results .pager-current {
   background-color: #a90044;
   color: white;
   font-weight: bold;
@@ -107,24 +111,26 @@
   margin-left: 3px !important;
 }
 
+#asu-gsa-search-form .form-submit,
+.asu-gsa-search-results h2#search-results-heading {
+  display: none;
+}
+
 @media (max-width: 580px) {
-  #edit-search-keys, #edit-search-keys--2 {
+  .asu-gsa-search-option #edit-search-keys,
+  .asu-gsa-search-results #edit-search-keys--2 {
     width: 80%;
   }
 
-  .search-gsa-sort {
+  .asu-gsa-search-option .search-gsa-sort {
     float: left;
     margin-top: -32px;
   }
 }
 
 @media (max-width: 444px) {
-  .search-gsa-sort {
+  .asu-gsa-search-option .search-gsa-sort {
     float: left;
     margin-top: -60px;
   }
-}
-
-#asu-gsa-search-form > div > h2 {
-  display: none;
 }
