@@ -1,3 +1,10 @@
+ASU GSA 7.x-1.2, 2018-10-05
+—————————————————————————
+- Namespaces CSS to stop from overreaching into other projects
+- Adds TPLs to override Google Appliance and core Search TPLs for results
+- Removes ASU GSA theme inc file
+- Fixes search box + button layouts
+
 ASU GSA 7.x-1.1, 2018-06-16
 —————————————————————————
 - Now updates the Google Appliance module when it is updated from prior releases up to v1.14.
